--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "babel-runtime": "^5.6.17",
     "react": "0.13.3",
-    "react-server": "file:../react-server-code-drop"
+    "react-server": "file:../react-server-code-drop",
+    "react-server-cli": "file:../react-server-cli"
   },
   "devDependencies": {
     "babel": "^5.5.8",
