--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "babel-runtime": "^5.6.17",
     "react": "0.13.3",
+    "react-bootstrap": "^0.23.7",
     "react-server": "file:../react-server-code-drop",
     "react-server-cli": "file:../react-server-cli"
   },
