--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "babel-runtime": "^5.6.17",
     "react": "0.13.3",
     "react-bootstrap": "^0.23.7",
+    "react-hot-loader": "^1.2.8",
     "react-server": "file:../react-server-code-drop",
-    "react-server-cli": "file:../react-server-cli"
+    "react-server-cli": "file:../react-server-cli",
+    "webpack": "^1.10.1",
+    "webpack-dev-server": "^1.10.1"
   },
   "devDependencies": {
     "babel": "^5.5.8",
