--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "license": "MIT",
   "dependencies": {
     "babel-runtime": "^5.6.17",
+    "classnames": "^2.1.3",
     "react": "0.13.3",
     "react-bootstrap": "^0.23.7",
     "react-server": "file:../react-server-code-drop",
     "react-server-cli": "file:../react-server-cli",
+    "redux": "^0.12.0",
     "webpack": "^1.10.1",
     "webpack-dev-server": "^1.10.1"
   },
