--- a/src/todomvc/package.json
+++ b/src/todomvc/package.json
@@ -9,19 +9,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "babel-runtime": "^5.6.17",
+    "babel-runtime": "^5.7.0",
     "classnames": "^2.1.3",
     "react": "0.13.3",
     "react-bootstrap": "^0.23.7",
-    "react-server": "file:../react-server-code-drop",
-    "react-server-cli": "file:../react-server-cli",
-    "redux": "^0.12.0",
-    "webpack": "^1.10.1",
-    "webpack-dev-server": "^1.10.1"
-  },
-  "devDependencies": {
-    "babel": "^5.5.8",
-    "gulp": "^3.9.0",
-    "gulp-babel": "^5.1.0"
+    "react-server": "file:../../../react-server-code-drop",
+    "react-server-cli": "file:../../../react-server-cli",
+    "redux": "^0.12.0"
   }
 }
