Oops. When I moved the example code up a directory, I forgot to fix the relative includes in the package.json files. Fixed.

--- a/simple/package.json
+++ b/simple/package.json
@@ -12,8 +12,8 @@
     "babel-runtime": "^5.7.0",
     "react": "0.13.3",
     "react-bootstrap": "^0.23.7",
-    "react-server": "file:../../../react-server-code-drop",
-    "react-server-cli": "file:../../../react-server-cli",
+    "react-server": "file:../../react-server-code-drop",
+    "react-server-cli": "file:../../react-server-cli",
     "redux": "^0.12.0"
   }
 }
