--- a/todomvc/package.json
+++ b/todomvc/package.json
@@ -13,8 +13,8 @@
     "classnames": "^2.1.3",
     "react": "0.13.3",
     "react-bootstrap": "^0.23.7",
-    "react-server": "file:../../../react-server-code-drop",
-    "react-server-cli": "file:../../../react-server-cli",
+    "react-server": "file:../../react-server-code-drop",
+    "react-server-cli": "file:../../react-server-cli",
     "redux": "^0.12.0"
   }
 }
