--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "react-server-examples",
+  "name": "react-server-examples-simple",
   "version": "1.0.0",
   "description": "Some simple examples of react-server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "./simple/start --routes=./simple/routes.js --port=5000 --jsurl=http://aickin.surge.sh/ --production"
   },
   "author": "",
   "license": "MIT",
@@ -12,9 +13,11 @@
     "@aickin/react-server": "0.0.0",
     "@aickin/react-server-cli": "^0.1.0",
     "babel-runtime": "^5.7.0",
-    "classnames": "^2.1.3",
     "react": "0.13.3",
     "react-bootstrap": "^0.23.7",
     "redux": "^0.12.0"
+  },
+  "engines": {
+    "node": "0.12.x"
   }
 }
