--- a/todomvc/package.json
+++ b/todomvc/package.json
@@ -9,12 +9,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "babel-runtime": "^5.7.0",
-    "classnames": "^2.1.3",
-    "react": "0.13.3",
-    "react-bootstrap": "^0.23.7",
-    "react-server": "file:../../react-server-code-drop",
-    "react-server-cli": "file:../../react-server-cli",
-    "redux": "^0.12.0"
+    "babel-runtime": "~5.7.0",
+    "classnames": "~2.1.3",
+    "react": "~0.14.2",
+    "react-bootstrap": "~0.23.7",
+    "react-server": "~0.0.1",
+    "react-server-cli": "~0.0.1",
+    "redux": "~0.12.0"
   }
 }
