--- a/simple/reduxCounter/.babelrc
+++ b/simple/reduxCounter/.babelrc
@@ -1,3 +1,4 @@
 {
-	"stage": 0
+	"presets": ["es2015", "react"],
+	"plugins": ["transform-runtime", "transform-inline-environment-variables", "transform-decorators-legacy", "transform-class-properties"]
 }
