--- a/simple/package.json
+++ b/simple/package.json
@@ -10,8 +10,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "babel-plugin-transform-class-properties": "^6.5.0",
+		"babel-plugin-transform-class-properties": "^6.5.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+		"babel-plugin-transform-inline-environment-variables": "~6.5.0",
+		"babel-plugin-transform-runtime": "~6.5.0",
+    "babel-preset-es2015": "~6.5.0",
+    "babel-preset-react": "~6.5.0",
     "react": "0.14.2",
     "react-bootstrap": "~0.23.7",
     "react-dom": "0.14.2",
