--- a/todomvc/.babelrc
+++ b/todomvc/.babelrc
@@ -1,7 +1,4 @@
 {
-	"stage": 1, 
-	"optional": [
-		"runtime",
-		"utility.inlineEnvironmentVariables"
-	]
+	"presets": ["es2015", "react"],
+	"plugins": ["transform-runtime", "transform-inline-environment-variables", "transform-decorators-legacy", "transform-class-properties"]
 }
