--- a/todomvc/package.json
+++ b/todomvc/package.json
@@ -4,17 +4,26 @@
   "description": "Some simple examples of react-server",
   "main": "index.js",
   "scripts": {
+    "start": "./node_modules/react-server-cli/bin/react-server-cli",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "babel-runtime": "~5.7.0",
+		"babel-plugin-transform-class-properties": "^6.5.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-inline-environment-variables": "^6.5.0",
+    "babel-plugin-transform-runtime": "^6.5.2",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-runtime": "~6.3.19",
     "classnames": "~2.1.3",
-    "react": "~0.14.2",
+    "react": "0.14.2",
+		"react-dom": "0.14.2",
     "react-bootstrap": "~0.23.7",
     "react-server": "~0.0.1",
     "react-server-cli": "~0.0.1",
-    "redux": "~0.12.0"
+    "redux": "~0.12.0",
+		"superagent": "1.2.0"
   }
 }
