--- a/helloworld/package.json
+++ b/helloworld/package.json
@@ -10,12 +10,12 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "babel-plugin-transform-runtime": "^6.5.2",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-react": "^6.5.0",
-    "react": "0.14.2",
-    "react-dom": "0.14.2",
-    "react-server": "0.0.7",
+    "babel-plugin-transform-runtime": "~6.5",
+    "babel-preset-es2015": "~6.5",
+    "babel-preset-react": "~6.5",
+    "react": "~0.14.2",
+    "react-dom": "~0.14.2",
+    "react-server": "~0.0.7",
     "react-server-cli": "~0.0.21",
     "superagent": "1.2.0"
   }
